# Dog-Shelter

./: CMakeLists.txt  README.md  main.cpp
bussiness/: Command.cpp  Command.h  Service.cpp  Service.h
domain/: Dog.cpp  Dog.h
exceptions/: Exception.h  RepositoryExeption.cpp  RepositoryExeption.h  ServiceException.cpp  ServiceException.h  UIException.cpp  UIException.h
files/: adoption_list.html  dogs.txt  file1.txt  file3.html  sample.html
infrastructure/: AdminRepository.h  CSVRepository.h  FileRepository.h  HTMLRepository.h  Repository.h  UserHTMLRepository.cpp  UserHTMLRepository.h  UserRepository.h
presentation/: AddDogDialog.cpp  AddDogDialog.h  AdminUI.cpp  AdminUI.h  AdminWindow.cpp  AdminWindow.h  CustomButton.cpp  CustomButton.h  CustomTable.cpp  DogInfoLayout.cpp  DogInfoLayout.h  DogPictureDelegate.cpp  DogsTableModel.cpp  FilterDialog.cpp  FilterDialog.h  ImageDrop.cpp  MainUI.cpp  MainUI.h  MainWindow.cpp  MainWindow.h  NewDogsWindow.cpp  NewDogsWindow.h  StatisticsWindow.cpp  StatisticsWindow.h  UI.cpp  UI.h  UpdateDogDialog.cpp  UpdateDogDialog.h  UserUI.cpp  UserUI.h  UserWindow.cpp  UserWindow.h  Window.cpp
src/: main.cpp
src/bussiness/: Command.h  Service.cpp  Service.h
src/domain/: Dog.h
src/files/: dogs.txt  (+1 more)
testing/: TestAdminRepository.cpp  TestAdminRepository.h  TestDomain.cpp  TestDomain.h  TestFileRepository.cpp  TestFileRepository.h  TestHTMLRepository.cpp  TestHTMLRepository.h  TestService.cpp  TestService.h  TestUserHTMLRepository.cpp  TestUserHTMLRepository.h  TestValidation.h
validation/: DogValidator.cpp  DogValidator.h
(+31 files in other folders)
